--- a/config.ini.example
+++ b/config.ini.example
@@ -5,3 +5,4 @@ redis_port=8765
 accounting_host="http://localhost:8877"
 port=8888
 api_secret="Foobar"
+psql_dsn='postgresql://postgres:postgres@localhost/qabel-block'
