--- a/build.xml
+++ b/build.xml
@@ -23,21 +23,21 @@
     <property name="vbin" value="${virtualenv}/bin"/>
     <condition property="virtualenv.exists"><available file="${virtualenv}" type="dir"/></condition>
     <target name="clean-virtualenv" if="virtualenv.exists">
-        <exec executable="rm" dir="${basedir}">
+        <exec executable="rm" dir="${basedir}" failonerror="true">
             <arg value="-r"/>
             <arg value="${virtualenv}"/>
         </exec>
         <property name="virtualenv.exists" value="false"/>
     </target>
     <target name="create-virtualenv">
-        <exec executable="virtualenv">
+        <exec executable="virtualenv" failonerror="true">
             <arg value="${virtualenv}"/>
             <arg value="--python=python3.5"/>
             <arg value="--no-site-packages"/>
         </exec>
     </target>
     <target name="virtualenv" depends="create-virtualenv">
-        <exec executable="${vbin}/pip">
+        <exec executable="${vbin}/pip" failonerror="true">
             <arg value="install"/>
             <arg value="--upgrade"/>
             <arg value="pip"/>
@@ -46,7 +46,7 @@
         </exec>
     </target>
     <target name="install" depends="virtualenv">
-        <exec executable="${vbin}/pip">
+        <exec executable="${vbin}/pip" failonerror="true">
             <arg value="install"/>
             <arg value="-U"/>
             <arg value="-r"/>
@@ -57,7 +57,7 @@
     </target>
     
     <target name="test" depends="install,clean-db">
-        <exec executable="${vbin}/py.test" dir="${basedir}/src">
+        <exec executable="${vbin}/py.test" dir="${basedir}/src" failonerror="true">
             <arg value="--junitxml=${basedir}/junit.xml"/>
             <arg value="-v"/>
             <arg value="--exitfirst"/>
